--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/netinfo": "9.3.7",
+    "audio-recorder-polyfill": "0.4.1",
     "expo": "~48.0.15",
     "expo-application": "~5.1.1",
     "expo-asset": "~8.9.1",
+    "expo-av": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-linking": "~4.0.1",
@@ -42,8 +44,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.11",
-    "expo-av": "~13.2.1"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
